replace screen.scss with styles.scss Also made README more clear

--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Ion Caza - Technical Resume</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="stylesheets/styles.css" rel="stylesheet" type="text/css" />
+        <!--[if IE]><link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" /><![endif]-->
     </head>
     <body>
         <h1>Resume</h1>
