--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
         <div class="row">
             <div class="contact col-md-6 col-sm-push-6">
                 <h2>Contact</h2>
-                <div class="name">Ion Caza</div>
-                <div class="email"><a href="mailto:let@caza.in">let@caza.in</a></div>
-                <div class="phone">+1 (248) 250-4056</div>
-                <div class="address">16241 Quakertown Ln</div>
-                <span class="city">Livonia</span>, <span class="state">MI</span> <span class="zipcode">48154</span>
+                <p translate="no" typeof="schema:PostalAddress">
+                    <span property="schema:name">Ion Caza</span><br>
+                    <span property="schema:streetAddress">16241 Quakertown Ln</span><br>
+                    <span property="schema:addressLocality">Livonia</span>, <abbr title="Michigan" property="schema:addressRegion">MI</abbr>                    <span property="schema:postalCode">48154</span><br>
+                    <abbr property="schema:addressCountry">USA</abbr>
+                </p>
             </div>
             <div class="description col-md-6 col-sm-pull-6">
                 <h2>Description</h2>
-                I am a motivated technical project manager and business analyst looking to deliver and expand my knowledge in the Information Technology industry. My goal is to employ a strategic problem-solving skillset to define and ascertain processes and best practices, while applying my functional skills in analysis and management.
+                I am a motivated technical project manager and business analyst looking to deliver and expand my knowledge in the Information
+                Technology industry. My goal is to employ a strategic problem-solving skillset to define and ascertain processes
+                and best practices, while applying my functional skills in analysis and management.
             </div>
         </div>
     </div>
