add email obfuscator

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Ion Caza - Technical Resume</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" />
+    <script src="javascripts/site.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="stylesheets/styles.css" type="text/css"/>
 </head>
 
 <body>
@@ -23,17 +24,17 @@
             <div class="contact col-md-6 col-sm-push-6">
                 <h2>Contact</h2>
                 <p translate="no" typeof="schema:PostalAddress">
-                    <span property="schema:name">Ion Caza</span><br>
-                    <span property="schema:streetAddress">16241 Quakertown Ln</span><br>
-                    <span property="schema:addressLocality">Livonia</span>, <abbr title="Michigan" property="schema:addressRegion">MI</abbr>                    <span property="schema:postalCode">48154</span><br>
-                    <abbr property="schema:addressCountry">USA</abbr>
+                    <span property="schema:name" class="name">Ion Caza</span><br>
+                    <span property="schema:streetAddress" class="address">16241 Quakertown Ln</span><br>
+                    <span property="schema:addressLocality" class="address">Livonia</span>, <abbr title="Michigan" property="schema:addressRegion" class="address">MI</abbr> <span property="schema:postalCode" class="address">48154</span><br>
+                    <abbr title="United States of America" property="schema:addressCountry" class="address">USA</abbr><br>
+                    <script>gmtl('let','caza.in','Opportunity awaits!');</script><br>
+                    <span property="schema:telephone" class="phone">+1 (248) 250 4056</span>
                 </p>
             </div>
             <div class="description col-md-6 col-sm-pull-6">
                 <h2>Description</h2>
-                I am a motivated technical project manager and business analyst looking to deliver and expand my knowledge in the Information
-                Technology industry. My goal is to employ a strategic problem-solving skillset to define and ascertain processes
-                and best practices, while applying my functional skills in analysis and management.
+                I am a motivated technical project manager and business analyst looking to deliver and expand my knowledge in the Information Technology industry. My goal is to employ a strategic problem-solving skillset to define and ascertain processes and best practices, while applying my functional skills in analysis and management.
             </div>
         </div>
     </div>
