--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row"><!-- Title -->
             <div class="title col-md-12">
                 <h1>Resume</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row"><!-- Header -->
             <div class="contact col-md-6 col-sm-push-6">
                 <h2>Contact</h2>
                 <p translate="no" typeof="schema:PostalAddress">
@@ -31,10 +31,13 @@
             </div>
             <div class="description col-md-6 col-sm-pull-6">
                 <h2>Description</h2>
-                I am a motivated technical project manager and business analyst looking to deliver and expand my knowledge in the Information
-                Technology industry. My goal is to employ a strategic problem-solving skillset to define and ascertain processes
-                and best practices, while applying my functional skills in analysis and management.
+                I'm a highly motivated technical product owner with a focus on Information Technology. As a senior project manager, business analyst, and solution architect, my experience allows me to define processes and best practices to create efficiencies and synergies within the product lifecycle. My goal is to successfully deliver products by employing a technical and strategic  problem-solving skillset.
             </div>
+        </div>
+        <div class="row"><!-- Body -->
+        
+        </div>
+        <div class="row"><!-- Footer -->
         </div>
     </div>
 </body>
