--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             </div>
         </div>
         <div class="row"><!-- Header -->
-            <div class="contact col-md-6 col-sm-push-6">
+            <div class="picture col-md-2 col-sm-push-6">
+                Cool pic bro
+            </div>
+            <div class="contact col-md-2 col-sm-push-8">
                 <h2>Contact</h2>
                 <p translate="no" typeof="schema:PostalAddress">
                     <span property="schema:name" class="name">Ion Caza</span><br>
@@ -32,13 +35,21 @@
                     <span property="schema:telephone" class="phone">+1 (248) 250 4056</span>
                 </p>
             </div>
+            <div class="links col-md-2 col-sm-push-4">
+                <h2>Links</h2>
+            </div>
             <div class="description col-md-6 col-sm-pull-6">
                 <h2>Description</h2>
                 I'm a highly motivated technical product owner with a focus on Information Technology. As a senior project manager, business analyst, and solution architect, my experience allows me to define processes and best practices to create efficiencies and synergies within the product lifecycle. My goal is to successfully deliver products by employing a technical and strategic  problem-solving skillset.
             </div>
         </div>
         <div class="row"><!-- Body -->
-        
+            <div class="job col-md-9">
+                Job description and shit
+            </div>
+            <div class="badge col-md-3">
+                Some sweet badges here
+            </div>
         </div>
         <div class="row"><!-- Footer -->
         </div>
