--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous"></script>
     <script src="javascripts/site.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/styles.css" type="text/css"/>
 </head>
 
@@ -45,7 +46,30 @@
         </div>
         <div class="row"><!-- Body -->
             <div class="job col-md-9">
-                Job description and shit
+                <div class="job-title">Technical Project Manager / Business Analyst</div>
+                <div class="job-location">Gas Station TV – Birmingham, MI & Detroit, MI</div>
+                <div class="job-date">August 2014 - May 2016</div>
+                <div class="job-description">GSTV holds market dominance as the largest network in North America to advertise and display content right at the pump. 
+                <ul class="list-group">
+                    <li class="list-group-item">Scrum master</li>
+                    <li class="list-group-item">Defined the Scrum Agile Software Development Lifecycle (SDLC) and introduced checks and balances that led to a significant increase in the team’s performance</li>
+                    <li class="list-group-item">Implemented JIRA and Confluence and designed the workflow to integrate these tools seamlessly in the SDLC</li>
+                    <li class="list-group-item">Estimated, planned, and tracked time, scope, and cost for Gbase – a custom ERP built in-house that will be used by all the departments of the company</li>
+                    <li class="list-group-item">Managed other projects that revolved around production applications and processes</li>
+                    <li class="list-group-item">Gathered requirements from internal and external stakeholders while interacting with all levels of management </li>
+                    <li class="list-group-item">Developed full stack technical specifications for the development of Gbase</li>
+                    <li class="list-group-item">Architected an extensible data model based on Gbase’s data requirements</li>
+                    <li class="list-group-item">Architected interim applications used to automate functions of Gbase and transition several departments to Gbase</li>
+                    <li class="list-group-item">Developed processes and scripts to facilitate Extracting, Transforming, and Loading (ETL) data from legacy data sources into the Gbase database</li>
+                    <li class="list-group-item">Maintained legacy applications and databases that were critical to the company</li>
+                    <li class="list-group-item">Managed relationship with third party resources that augmented the main development team</li>
+                    <li class="list-group-item">Trained QA personnel</li>
+                    <li class="list-group-item">Advised QA on the creation of test cases and test plans for all internal projects</li>
+                    <li class="list-group-item">Actively participated in UX/UI improvement and design discussions</li>
+                    <li class="list-group-item">Performed UAT validation testing with business stakeholders</li>
+                    <li class="list-group-item">Improved the accuracy of inventory reports for the executive team by 60% - this increased their understanding of when GSTV is oversold and undersold as a network, with the help of data gathered from previous projects</li>
+                </ul>
+            </div>
             </div>
             <div class="badge col-md-3">
                 Some sweet badges here
