Fix issues and styling in transition from BS3 to BS4

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -6,12 +6,13 @@
  <title>Ion Caza - Technical Resume</title>
  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+ <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
  <script src="js/bootstrap.min.js"></script>
  <script src="js/jsontree.min.js"></script>
  <script src="js/site.js"></script>
  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="css/styles.css" type="text/css" />
  <link rel="stylesheet" href="css/jsontree.css" type="text/css" />
+ <link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 
 <body>
@@ -25,7 +26,7 @@
 
   <!-- Header -->
   <div class="row">
-   <div class="contact col-md-3 push-md-6">
+   <div class="contact col-md-2 push-md-8">
     <h2>Contact</h2>
     <div translate="no" typeof="schema:PostalAddress">
      <span property="schema:name" class="name">Ion Caza</span><br>
@@ -38,7 +39,7 @@
      <span property="schema:telephone" class="phone">+1 (248) 250 4056</span>
     </div>
    </div>
-   <div class="links col-md-3 push-md-6">
+   <div class="links col-md-2 push-md-8">
     <h2>Links</h2>
     <ul class="list-group">
      <li class="list-group-item"><a href="https://www.linkedin.com/in/ioncaza/">LinkedIn</a></li>
@@ -47,7 +48,7 @@
      <li class="list-group-item"><a href="https://www.mopar.com/">Mopar.com</a></li>
     </ul>
    </div>
-   <div class="description col-md-6 pull-md-6">
+   <div class="description col-md-8 pull-md-4">
     <h2>Description</h2>
     I'm a highly motivated technical product owner with a focus on Information Technology. As a senior project manager, business analyst, and solution architect, my experience allows me to define processes and best practices to create efficiencies and synergies
     within the product lifecycle. My goal is to successfully deliver products by employing a technical and strategic problem-solving skillset.
@@ -56,7 +57,7 @@
 
   <!-- Body -->
   <div class="row">
-   <div class="left-pane col-md-9">
+   <div class="left-pane col-8">
     <div class="jobs">
      <div class="subtitle">
       <h2>Experience</h2>
@@ -235,19 +236,21 @@
     </div>
     <div class="education">
      <h2>Education</h2>
-     <div class="degree col-md-4">
-      <div class="degree-title">Master of Business Administration</div>
-      <div class="degree-school">University of Michigan</div>
-      <div class="degree-date">September 2011 - March 2013</div>
-     </div>
-     <div class="degree col-md-4">
-      <div class="degree-title">Bachelor of Business Administration</div>
-      <div class="degree-school">University of Michigan</div>
-      <div class="degree-date">September 2007 - August 2011</div>
+     <div class="row">
+      <div class="degree col-6">
+       <div class="degree-title">Master of Business Administration</div>
+       <div class="degree-school">University of Michigan</div>
+       <div class="degree-date">September 2011 - March 2013</div>
+      </div>
+      <div class="degree col-6">
+       <div class="degree-title">Bachelor of Business Administration</div>
+       <div class="degree-school">University of Michigan</div>
+       <div class="degree-date">September 2007 - August 2011</div>
+      </div>
      </div>
     </div>
    </div>
-   <div class="right-pane col-md-3">
+   <div class="right-pane col-4">
     <div class="skills">
      <h2>Skills</h2>
      All skills are ordered from most to least favorite. General skills are represented in years of experience.
